Default image added icon prop removed tag truncation fixed class changes and new stories added

--- a/src/components/LearnCard/LearnCard.scss
+++ b/src/components/LearnCard/LearnCard.scss
@@ -5,7 +5,7 @@
   background-color: white;
   border-radius: 2em;
   box-shadow: 0px 5px 5px #d2d2d2;
-  padding: 1.7em 1.8em;
+  padding: 1.7em 2.5em;
   margin-bottom: 1.2em;
 }
 .qui.qui-learn-card .is-hidden {
@@ -16,11 +16,13 @@
   position: relative;
   z-index: 10;
 }
-.qui .qui-game-thumbnail {
+.qui .qui-learn-card-game-thumbnail {
   height: 12em;
   width: 12em;
   margin: 0.3em 1.5em 0 0;
   border-radius: 1.2em;
+  box-shadow: 0px 5px 6px 2px #d2d2d2;
+  object-fit: cover;
 }
 .qui .qui-learn-card-header {
   display: flex;
@@ -28,7 +30,7 @@
   align-items: center;
 }
 .qui .qui-learn-card-title {
-  max-width: 13em;
+  max-width: 15em;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -37,10 +39,16 @@
   margin: 0;
   font-size: 2.5em;
   font-weight: 500;
- 
 }
 .qui .qui-tag-container {
   margin-bottom: 0.3em;
+  max-width: 15em;
+}
+.qui .qui-tag-container p {
+  padding: 0.2em 0.3em;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .qui .qui-points {
   display: flex;
@@ -57,13 +65,12 @@
   width: 90%;
   margin-top: 0.4em;
 }
-.qui .qui-info img{
+.qui .qui-info img {
   height: 3.5em;
   width: 3.5em;
   margin-right: 0.5em;
 }
 .qui .qui-lower-container {
-  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -73,7 +80,7 @@
 }
 .qui .qui-single-tag {
   padding: 0.5em;
-  border-radius: 0.6em;
+  border-radius: 0.4em;
 }
 .qui .qui-tags {
   display: flex;
@@ -85,21 +92,21 @@
   margin: 0;
   margin-right: 1em;
 }
-.qui .qui-banner {
+.qui .qui-learn-card-banner {
   position: absolute;
-  bottom: 1%;
-  right: 3%;
+  bottom: 5%;
+  right: 2.5%;
   height: 5.5em;
   width: 0.7em;
 }
-.qui .qui-content {
+.qui .qui-learn-card-content {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   position: relative;
   z-index: 2;
   margin-left: 1.5em;
-  min-height: 14em;
+  min-height: 14.5em;
   width: 100%;
 }
 .qui .qui-info i {
@@ -139,6 +146,9 @@
   }
   .qui-learn-card {
     font-size: 0.32em;
+  }
+  .qui .qui-tag-container p {
+    font-size: 1.6em;
   }
 }
 @media only screen and (min-width: 481px) {
